# pypistats-plots

./: README.md  plot_pypistats.py  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
