[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pypistatsplots"
version = "1.2.0"
description = "Plot Python package data from pypistats"
keywords = ["pypi", "package"]
classifiers = ["Development Status :: 5 - Production/Stable",
 "Environment :: Console",
 "Intended Audience :: Developers",
 "License :: OSI Approved :: MIT License",
 "Operating System :: OS Independent",
 "Programming Language :: Python :: 3",
 "Topic :: Utilities"
]
requires-python = ">=3.7"
dynamic = ["readme"]
dependencies = ["pypistats", "matplotlib", "pandas"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}

[project.optional-dependencies]
tests = ["pytest"]
lint = ["flake8", "flake8-bugbear", "flake8-builtins", "flake8-blind-except", "mypy"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.mypy]
files = ["."]
ignore_missing_imports = true

strict_optional = false
