[metadata]
name = pypistatsplots
version = 1.1.0
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
description = Plot Python package data from PyPistats
url = https://github.com/scivision/pypistats-plots
keywords =
  pypi
  packages
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: Developers
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Topic :: Utilities
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
packages = find:
zip_safe = false
scripts =
install_requires =
  pypistats
  matplotlib
  pandas

[options.extras_require]
lint =
  flake8
  flake8-bugbear
  flake8-builtins
  flake8-blind-except
  mypy
